== 1.5.7 / unreleased

* Bugfixes
  * (JRuby) Java Nokogiri is finally green (passes all tests) under 1.8 and 1.9 mode. High five everyone. #798, #705
  * (JRuby) Nokogiri::XML::Reader broken (as a pull parser) on jruby - reads the whole XML document. #831.

== 1.5.6 / 2012-12-19

* Features

  * Improved performance of XML::Document#collect_namespaces. #761 (Thanks, Juergen Mangler!)
  * New callback SAX::Document#processing_instruction (Thanks, Kitaiti Makoto!)
  * Node#native_content= allows setting unescaped node contant. #768
  * XPath lookup with namespaces supports symbol keys. #729 (Thanks, Ben Langfeld.)
  * XML::Node#[]= stringifies values. #729 (Thanks, Ben Langfeld.)
  * bin/nokogiri will process a document from $stdin
  * bin/nokogiri -e will execute a program from the command line
  * bin/nokogiri --version will print the Xerces and NekoHTML versions when ran with JRuby.


* Bugfixes
  * Nokogiri now detects XSLT transform errors. #731 (Thanks, Justin Fitzsimmons!)
  * Don't throw an Error when trying to replace top-level text node in DocumentFragment. #775
  * Raise an ArgumentError if an invalid encoding is passed to the SAX parser. #756 (Thanks, Bradley Schaefer!)
  * Prefixed element inconsistency between CRuby and JRuby. #712
  * (JRuby) space prior to xml preamble causes nokogiri to fail parsing. (fixed along with #748) #790
  * (JRuby) Fixed the bug Nokogiri::XML::Node#content inconsistency between Java and C. #794, #797
  * (JRuby) raises INVALID_CHARACTER_ERR exception when EntityReference name starts with '#'. #719
  * (JRuby) doesn't coerce namespaces out of strings on a direct subclass of Node. #715
  * (JRuby) Node#content now renders newlines properly. #737 (Thanks, Piotr Szmielew!)
  * (JRuby) Unknown namespace are ignore when the recover option is used. #748
  * (JRuby) XPath queries for namespaces should not throw exceptions when called twice in a row. #764